--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -5,13 +5,30 @@
 .hidden{
     visibility: hidden;
 }
-.transparent{
+.smallLogo{
     background:transparent;
     position: fixed;
     width:10vw;
     height: 75vh;
 }
-h1{
+.largeLogo{
+    position: fixed;
+    background:transparent;
+    height: 10vh;
+    text-align: center;
+    width: 36vw;
+    margin-left: 32vw;
+    margin-top: 45vh;
+}
+.blackWhite{
+    background:black;
+    color:white;
+    font-family:Hind;
+    font-weight: bolder;
+    font-size: calc(50% + 5vw);
+    margin:0;
+}
+.transparent{
     color: black;
     writing-mode: vertical-rl;
     text-orientation: upright;
@@ -19,6 +36,13 @@ h1{
     letter-spacing:-13px;
     font-weight: bolder;
     font-size: calc(50% + 5vh);
+}
+.blocks{
+    -webkit-transition: height 0.3s,width 0.3s; /* Safari */
+    transition: height 0.3s, width 0.3s;
+}
+.blockWrapper{
+    height:100%;
 }
 .transition{
     transition: visibility 0.3s;
@@ -30,41 +54,73 @@ h1{
     height: 25vh;
     margin: 0;
 }
- 
-.blockHover{
-    height: calc(50vh / 3);
+.blockRow{
+    height: 50vh;
+    width: 100vw;
     margin: 0;
 }
-.blockHover:hover{
-    height: 50vh;
+.blockRowHover{
+    height: 25vh;
+    width: 100vw;
+    margin: 0;
 }
-.blocks{
-    -webkit-transition: height 0.3s; /* Safari */
-    transition: height 0.3s;
+.blockRowHoverHover{
+    height: 75vh;
+    width: 100vw;
+    margin: 0;
 }
+.blockCol{
+    width:50vw;
+    height:100%;
+    padding: 0;
+}
+.blockColHover{
+    width:25vw;
+    height:100%;
+    padding: 0;
+}
+.blockColHoverHover{
+    width:75vw;
+    height:100%;
+    padding: 0;
+}
+
 .blockContent{
     width:100vw;
     height: 100%;
 }
+.blockWrapper{
+    height:100%;
+}
 .one{
     color:black;
     background-color:white;
+    padding-top:10vh;
+    padding-left:calc(10% + 3vw);
 }
 .two{
     color:black;
     background-color: #ffc800;
+    padding-top:10vh;
+    padding-right:calc(10% + 3vw);
+    text-align:right;
 }
 .three{
     color:black;
     background-color: white;
+    padding-bottom:10vh;
+    padding-right:calc(10% + 3vw);
+    text-align:right;
 }
 .four{
     color:white;
     background-color: black;
+    padding-bottom:10vh;
+    padding-left:calc(10% + 3vw);
 }
-
 .header{
     font-size: calc(50% + 1.5vw);
+    padding:0;
 }
 p,a,.header{
     font-family:Hind;
@@ -80,15 +136,13 @@ a:hover{
 .black, .black:hover{
     color:black;
 }
-.vcenter {
-    margin-top: 50%;
-}
 .textCol{
-    text-align: center;
     font-size: calc(50% + 0.7vw);
     padding:0;
 }
 
 body{
     background-color: black;
+    width: 100vw;
+    height: 100vh;
 }
