--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -5,27 +5,25 @@
 .hidden{
     visibility: hidden;
 }
-.smallLogo{
-    background:transparent;
-    position: fixed;
-    width:10vw;
-    height: 75vh;
+.visible{
+    visibility: visible;
+}
+.marginTop{
+    margin-top:5.5vh;
 }
 .largeLogo{
     position: fixed;
     background:transparent;
     height: 10vh;
     text-align: center;
-    width: 36vw;
-    margin-left: 32vw;
-    margin-top: 45vh;
+    margin-top: 2vh;
+    margin-left: 2vw;
 }
 .blackWhite{
-    background:black;
+    background:transparent;
     color:white;
     font-family:Hind;
-    font-weight: bolder;
-    font-size: calc(50% + 5vw);
+    font-size: calc(50% + 2vw);
     margin:0;
 }
 .transparent{
@@ -89,34 +87,25 @@
     width:100vw;
     height: 100%;
 }
-.blockWrapper{
-    height:100%;
-}
 .one{
-    color:black;
-    background-color:white;
-    padding-top:10vh;
-    padding-left:calc(10% + 3vw);
+    color:white;
+    background-color:#ffc800;
+    text-align:center
 }
 .two{
     color:black;
-    background-color: #ffc800;
-    padding-top:10vh;
-    padding-right:calc(10% + 3vw);
-    text-align:right;
+    background-color: white;
+    text-align:center;
 }
 .three{
-    color:black;
-    background-color: white;
-    padding-bottom:10vh;
-    padding-right:calc(10% + 3vw);
-    text-align:right;
-}
-.four{
     color:white;
     background-color: black;
-    padding-bottom:10vh;
-    padding-left:calc(10% + 3vw);
+    text-align:center;
+}
+.four{
+    color:black;
+    background-color: white;
+    text-align:center
 }
 .header{
     font-size: calc(50% + 1.5vw);
