--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -8,6 +8,13 @@
 .visible{
     visibility: visible;
 }
+.fullHeight{
+    height:100%;
+}
+.fullWidth{
+    height:100%;
+    width:100% !important;
+}
 .headerWrapper{
     height:35%;
     padding-bottom: 10px;
@@ -47,42 +54,36 @@
     transition-delay: 0.3s;
 } 
 .block{
-    height: 25vh;
-    height: calc(var(--vh, 1vh) * 25);
+    height: 25%;
     margin: 0;
 }
 .blockRow{
-    height: 50vh;
-    height: calc(var(--vh, 1vh) * 50);
-    width: 100vw;
+    height: 50%;
+    width: 100%;
     margin: 0;
 }
 .blockRowHover{
-    height: 25vh;
-    height: calc(var(--vh, 1vh) * 25);
-    width: 100vw;
+    height: 25%;
+    width: 100%;
     margin: 0;
 }
 .blockRowHoverHover{
-    height: 75vh;
-    height: calc(var(--vh, 1vh) * 75);
-    width: 100vw;
+    height: 75%;
+    width: 100%;
     margin: 0;
 }
 .blockCol{
-    width:50vw;
+    width:50%;
     height:100%;
     padding: 0;
 }
 .blockColHover{
-    width:25vw;
-    height: calc(var(--vh, 1vh) * 25);
+    width:25%;
     height:100%;
     padding: 0;
 }
 .blockColHoverHover{
-    width:75vw;
-    height: calc(var(--vh, 1vh) * 75);
+    width:75%;
     height:100%;
     padding: 0;
 }
@@ -134,7 +135,13 @@ a:hover{
 
 body{
     background-color: black;
-    width: 100vw;
-    height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
+    width: 100%;
+    height: 100% !important;
+}
+#root{
+    height:100% !important;
+    width: 100% !important;
+}
+html{
+    height:100% !important;
 }
