--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -112,7 +112,7 @@
     font-weight:bold;
     padding:0;
 }
-p,a,.header{
+p,a,h4,.header{
     font-family:Hind;
 }
 a{
@@ -131,6 +131,47 @@ a:hover{
     padding:0;
     height:100%;
     font-weight:bold;
+}
+
+.mapTopBottomRow{
+    height: 20%;
+    width: 100%;
+    margin: 0;
+}
+.mapMiddleRow{
+    height: 60%;
+    width: 100%;
+    margin: 0;
+}
+.top{
+    color:white;
+    background-color:#ffc800;
+    align-items: center;
+    justify-content: flex-end;
+}
+.top>h4{
+    margin-right: 1% !important;
+}
+.midLeft{
+    color:black;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+}
+.midRight{
+    color:black;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+}
+.bottom{
+    color:white;
+    background-color: black;
+    align-items: center;
+    justify-content: flex-start;
+}
+.bottom>h4{
+    margin-left: 1% !important;
 }
 
 body{
