--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -112,8 +112,9 @@
     font-weight:bold;
     padding:0;
 }
-p,a,h4,.header{
+p,a,.header{
     font-family:Hind;
+    margin-bottom: 4px;
 }
 a{
     color:white;
@@ -133,13 +134,18 @@ a:hover{
     font-weight:bold;
 }
 
-.mapTopBottomRow{
-    height: 20%;
+.mapTopRow{
+    height: 15%;
+    width: 100%;
+    margin: 0;
+}
+.mapBottomRow{
+    height: 4%;
     width: 100%;
     margin: 0;
 }
 .mapMiddleRow{
-    height: 60%;
+    height: 81%;
     width: 100%;
     margin: 0;
 }
@@ -149,12 +155,10 @@ a:hover{
     align-items: center;
     justify-content: flex-end;
 }
-.top>h4{
-    margin-right: 1% !important;
-}
 .midLeft{
     color:black;
     background-color: white;
+  flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -167,11 +171,7 @@ a:hover{
 .bottom{
     color:white;
     background-color: black;
-    align-items: center;
-    justify-content: flex-start;
-}
-.bottom>h4{
-    margin-left: 1% !important;
+    justify-content: flex-end;
 }
 
 body{
